--- a/server/views/includes/footer.ejs
+++ b/server/views/includes/footer.ejs
@@ -5,12 +5,12 @@
         <div class="row">
 
             <div class="col-md-3">
-                <ul>
+                <ul class="footerUl">
                     <li><strong>Information</strong></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">FAQs</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">FAQs</a></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">About us at iHype</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">About us at iHype</a></li>
                     <br/>
                     <li><span class="glyphicon glyphicon-map-marker"></span>&nbsp;&nbsp;39 Artillery Avenue, Sentosa<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Singapore 099958</li>
                     <br/>
@@ -18,23 +18,23 @@
                     <br/>
                     <li><span class="glyphicon glyphicon-phone-alt"></span>&nbsp;&nbsp;+65 6448 9999</li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;<a class="ourEmail" href="mailto:contactus@iHype.com.sg">contactus@iHype.com.sg</a></li>
+                    <li><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;<a class="ourEmail footerA" href="mailto:contactus@iHype.com.sg">contactus@iHype.com.sg</a></li>
                 </ul>
             </div>
 
             <div class="col-md-3">
-                <ul>
+                <ul class="footerUl">
                     <li><strong>Site Map</strong></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Clothes</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">Men's Fashion</a></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Watches</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">Women's Fashion</a></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Bags & Wallets</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">Sell</a></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Accessories</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">Messenger</a></li>
                     <br/>
-                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Footwear</a></li>
+                    <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="#">Customer Support</a></li>
                     <br/><br/><br/>
                 </ul>
             </div>
@@ -43,29 +43,29 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <ul>
+                        <ul class="footerUl">
                             <li><strong>Policies</strong></li>
                             <br/>
-                            <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Terms & Conditions</a></li>
+                            <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="/terms&conditions">Terms & Conditions</a></li>
                             <br/>
-                            <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a href="#">Privacy</a></li>
+                            <li><span class="glyphicon glyphicon-menu-right"></span>&nbsp;&nbsp;<a class="footerA" href="/privacy">Privacy</a></li>
                             <br/><br/>
                         </ul>
                     </div>
                     <div class="col-md-6">
-                        <ul>
+                        <ul class="footerUl">
                             <li><strong>Follow iHype</strong></li>
                             <br/>
-                            <a href="https://www.facebook.com/"><img class="SocialSocial" src="images/Facebook.png"></a>&nbsp;&nbsp;&nbsp;
-                            <a href="https://www.instagram.com/"><img class="SocialSocial" src="images/Instagram.png"></a>&nbsp;&nbsp;&nbsp;
-                            <a href="https://twitter.com/"><img class="SocialSocial" src="images/Twitter.png"></a>
+                            <a class="footerA" href="https://www.facebook.com/"><img class="SocialSocial" src="images/Facebook.png"></a>&nbsp;&nbsp;&nbsp;
+                            <a class="footerA" href="https://www.instagram.com/"><img class="SocialSocial" src="images/Instagram.png"></a>&nbsp;&nbsp;&nbsp;
+                            <a class="footerA" href="https://twitter.com/"><img class="SocialSocial" src="images/Twitter.png"></a>
                         </ul>
                     </div>
                 </div>
                 
                 <div class="row paymentMethodContainer">
                     <div class="col-md-12">
-                        <ul>
+                        <ul class="footerUl">
                             <li><strong>Payment Methods</strong></li>
                             <img class="PayPay" src="images/Nets.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <img class="PayPay" src="images/Paypal.png">&nbsp;&nbsp;&nbsp;
