--- a/server/views/includes/header.ejs
+++ b/server/views/includes/header.ejs
@@ -7,7 +7,7 @@
     <i class="fa fa-bars"></i>
   </span>
   <div class="container logoContainer">
-    <a href="#">
+    <a id="logoAtag" href="/">
       <img id="logo" src="images/iHype.png">
     </a>
   </div>
@@ -18,28 +18,76 @@
 
 
     <li class="dropdown">
-      <a class="nav-links Categories" data-toggle="dropdown" data-target="" href="#">Men
-      <span class="caret"></span></a>
-      <ul id="demo" class="dropdown-menu">
-        <li><a href="#">Page 1-1</a></li>
-        <li><a href="#">Page 1-2</a></li>
-        <li><a href="#">Page 1-3</a></li>
-      </ul>
+      <a class="nav-links menCate" data-toggle="dropdown" data-target="">Men
+        <span class="caret"></span>
+      </a>
+      <div id="menCate" class="dropdown-menu">
+        <div class="leftCate">
+          <p><b>By Category</b></p>
+          <hr>
+          <ul>
+            <li><a class="categories" href="#">All</a></li>
+            <li><a class="categories" href="#">Clothing</a></li>
+            <li><a class="categories" href="#">Bags</a></li>
+            <li><a class="categories" href="#">Accessories</a></li>
+            <li><a class="categories" href="#">Watches</a></li>
+            <li><a class="categories" href="#">Shoes</a></li>
+          </ul>
+        </div>
+        <div class="rightCate">
+          <p><b>By Designer</b></p>
+          <hr>
+          <ul>
+            <li><a class="categories" href="#">All</a></li>
+            <li><a class="categories" href="#">Clothing</a></li>
+            <li><a class="categories" href="#">Bags</a></li>
+            <li><a class="categories" href="#">Accessories</a></li>
+            <li><a class="categories" href="#">Watches</a></li>
+            <li><a class="categories" href="#">Shoes</a></li>
+          </ul>
+        </div>
+      </div>
     </li>
     
-    <li><a href="#" class="nav-links">Women</a></li>
-    
-    
+    <li class="dropdown">
+      <a class="nav-links womenCate" data-toggle="dropdown" data-target="">Women
+        <span class="caret"></span>
+      </a>
+      <div id="womenCate" class="dropdown-menu">
+        <div class="leftCate">
+          <p><b>By Category</b></p>
+          <hr>
+          <ul>
+            <li><a class="categories" href="#">All</a></li>
+            <li><a class="categories" href="#">Clothing</a></li>
+            <li><a class="categories" href="#">Dresses</a></li>
+            <li><a class="categories" href="#">Bags</a></li>
+            <li><a class="categories" href="#">Accessories</a></li>
+            <li><a class="categories" href="#">Jewellery</a></li>
+            <li><a class="categories" href="#">Shoes</a></li>
+          </ul>
+        </div>
+        <div class="rightCate">
+          <p><b>By Designer</b></p>
+          <hr>
+          <ul>
+            <li><a class="categories" href="#">All</a></li>
+            <li><a class="categories" href="#">Clothing</a></li>
+            <li><a class="categories" href="#">Dresses</a></li>
+            <li><a class="categories" href="#">Bags</a></li>
+            <li><a class="categories" href="#">Accessories</a></li>
+            <li><a class="categories" href="#">Jewellery</a></li>
+            <li><a class="categories" href="#">Shoes</a></li>
+          </ul>
+        </div>
+      </div>
+    </li>
 
-
-
-    <div class="container loggerContainer">
-      <a href="#" id="login">Log In</a>
-      <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-      <a href="#" id="signup">Sign Up</a>
+    <div class="loggerContainer">
+      <a href="/login" id="login">Log In</a>
     </div>
   </ul>
-
+  
   <img id="logoPic" src="images/noBGLogo.png">
 
 </nav>
